- VertoChat Android CHANGES


* version 1.2.0 (TODO)
  - Updated Gradle, build tools and dependencies.
  - Added Kotlin support.


* version 1.1.0 (14.08.2018)
  - Changed oldest supported version of Android to 4.1, Jelly Bean.
  - Converted to Gradle for building.
  - Replaced ActionBarSherlock with AppCompat.
  - Migrated to NotificationCompat.Builder to avoid usage of deprecated apis.
  - Moved to PreferenceFragment to get ActionBar in the Settings.
  - Updated white and transparent status bar icons, to make it work on Android 5 and up.
  - Improved support for sending files with content uris.
  - Added support for asking for permissions on Android 6.
  - Fixed issue where user interface would sometimes hang on Android 6.
  - Removed VertoChat from title on settings and private chat.
  - Removed line height fix on Android 5 and up, because of bug #77941 with ignored line spacing.
  - Added notification with progress bar and cancel button for file transfers.
  - Added separate notifications for unread messages.
  - Added optional usage of light, sound and vibration on notifications.
  - Imported backend code from VertoChat v1.3.0 for desktop.
  - Changing to switches instead of checkboxes in Settings on Lollipop and newer.
  - Updated copyright to include 2018.


* version 1.0.2 (26.10.2014)
  - Lots of cleanups regarding singletons and statics.
  - Split code for saving and loading desktop settings out of Android.
  - Added support for sending files from file managers using the file:// protocol.
  - Started work on translation support.


* version 1.0.1 (17.08.2014)
  - Fixed crash when hiding and showing VertoChat without a network connection.
  - Added details about missing connections in the ActionBar.


* version 1.0.0 (14.06.2014)
  - Changed default nick name to be "NewUser" instead of a numerical id.
  - The away message of another user, if set, is shown as a subtitle in the ActionBar of the private chat.
  - Added support for away mode.

