@@ -12,6 +12,7 @@
   <uses-feature android:name="android.hardware.wifi"/>
 
   <application android:label="@string/app_name"
+               android:name=".app.KouChatApp"
                android:icon="@drawable/ic_launcher"
                android:theme="@style/Theme.VertoChat.Light"
                android:allowBackup="true">
