@@ -4,6 +4,7 @@
 * version 1.2.0 (TODO)
   - Updated Gradle, build tools and dependencies.
   - Added Kotlin support.
+  - Added notification channels for Android Oreo and newer.
 
 
 * version 1.1.0 (14.08.2018)
